src/tui/widgets/popups/snapshots/rusted_tui_mc_launcher__tui__widgets__popups__error__render_tests__error_level_renders.snap
---
source: src/tui/widgets/popups/error.rs
expression: term.backend()
---
"╭ 错误 ────────────────────────────────╮" Hidden by multi-width symbols: [(3, " "), (5, " ")]
"│Connection refused                    │"
"│                                      │"
"│                                      │"
"╰──────────────────────────────────────╯"
