src/tui/widgets/popups/snapshots/rusted_tui_mc_launcher__tui__widgets__popups__error__render_tests__long_message_wraps.snap
---
source: src/tui/widgets/popups/error.rs
expression: term.backend()
---
"╭ 错误 ────────────────────────────────╮" Hidden by multi-width symbols: [(3, " "), (5, " ")]
"│The Minecraft launcher could not reach│"
"│the Mojang version manifest after     │"
"│three retries. Check your network     │"
"│connection or proxy settings.         │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"╰──────────────────────────────────────╯"
