src/tui/widgets/popups/snapshots/rusted_tui_mc_launcher__tui__widgets__popups__error__render_tests__narrow_frame_renders.snap
---
source: src/tui/widgets/popups/error.rs
expression: term.backend()
---
"╭ 警告 ──────────╮" Hidden by multi-width symbols: [(3, " "), (5, " ")]
"│Short message   │"
"│                │"
"│                │"
"╰────────────────╯"
